removes social media icon and font change

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
           <div class="social-item">
             <a href="https://www.linkedin.com/in/sudendra-priyan/" target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/linkedin.png"/></a>
           </div>
-          <div class="social-item">
+          <!-- <div class="social-item">
             <a href="https://www.facebook.com/iamsudendrapriyan" target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png"/></a>
           </div>
           <div class="social-item">
             <a href="https://www.instagram.com/sudendrapriyan/" target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png"/></a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -117,7 +117,7 @@
         <div class="service-item">
           <div class="icon"><img src="img/logo6.png" style="object-fit: scale-down; object-position: 50% 50%;"/></div>
           <h2>TestNG Framework</h2>
-          <p>I have have started my career with TestNG framework(JAVA), I have worked on adding enhancement to the exisiting code to facilitate new features.</p>
+          <p>I have started my career with TestNG framework(JAVA), I have worked on adding enhancement to the exisiting code to facilitate new features.</p>
         </div>
       </div>
     </div>
@@ -148,7 +148,7 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2>Tamil Nadu, India</h2>
+            <h2>Chennai, India</h2>
           </div>
         </div>
         
@@ -160,7 +160,7 @@
   <!-- Footer -->
   <section id="footer">
     <div class="footer container">
-      <p>Copyright © 210. All rights reserved</p>
+      <p>Copyright © 2020. All rights reserved</p>
     </div>
   </section>
   <!-- End Footer -->
